--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# macOS system files
+.DS_Store
+
+# model 파일 추가
+hand_landmarker.task
+
+# Environment
+.env
+
+# Django
+db.sqlite3
+
